<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot Password?</string>
    <string name="conform_password">******</string>
    <string name="password">******</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="btn_register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login_Admin">Login as Admin</string>
</resources>