<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:visibility="visible"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/backgroundColor"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10sp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/backgroundColor"
        android:textColorHint="@color/backgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register" />

    <EditText
        android:id="@+id/Admin_InputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10sp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/backgroundColor"
        android:textColorHint="@color/backgroundColor"
        app:layout_constraintEnd_toEndOf="@+id/Username"
        app:layout_constraintStart_toStartOf="@+id/Username"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <EditText
        android:id="@+id/InputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10sp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/backgroundColor"
        android:textColorHint="@color/backgroundColor"
        app:layout_constraintEnd_toEndOf="@+id/Admin_InputEmail"
        app:layout_constraintStart_toStartOf="@+id/Admin_InputEmail"
        app:layout_constraintTop_toBottomOf="@+id/Admin_InputEmail"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/InputConformPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/conform_password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10sp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/backgroundColor"
        android:textColorHint="@color/backgroundColor"
        app:layout_constraintEnd_toEndOf="@+id/InputPassword"
        app:layout_constraintStart_toStartOf="@+id/InputPassword"
        app:layout_constraintTop_toBottomOf="@+id/InputPassword"
        android:autofillHints="" />

    <android.widget.Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bg"
        android:text="@string/btn_register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/InputConformPassword"
        app:layout_constraintStart_toStartOf="@+id/InputConformPassword"
        app:layout_constraintTop_toBottomOf="@+id/InputConformPassword"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:shadowColor="@color/backgroundColor"
        android:text="@string/already_have_an_account"
        android:textColor="@color/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>